<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvShowText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Show Text" />

    <RadioGroup
        android:id="@+id/rdGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/tvShowText"
        app:layout_constraintStart_toStartOf="@+id/tvShowText"
        app:layout_constraintTop_toBottomOf="@+id/tvShowText">

        <RadioButton
            android:id="@+id/rbAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_android"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbSwift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_swift"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbJava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_java"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/rdGroup"
        app:layout_constraintStart_toStartOf="@+id/rdGroup"
        app:layout_constraintTop_toBottomOf="@+id/rdGroup"
        tools:text="You Choose Android" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_finish"
        app:layout_constraintEnd_toEndOf="@+id/tvChoose"
        app:layout_constraintStart_toStartOf="@+id/tvChoose"
        app:layout_constraintTop_toBottomOf="@+id/tvChoose"
        app:strokeColor="@color/colorPrimaryDark" />

</androidx.constraintlayout.widget.ConstraintLayout>